# nlp-stock-sa

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  admin.sh  docker-compose.yml  jsconfig.json
server/: Dockerfile  README.md  alembic.ini  conftest.py  gunicorn_config.py  pyproject.toml  pytest.ini
server/api/: app.py
server/config/: logging.py
server/db/: db.py
server/migrations/: env.py  script.py.mako
server/models/sentiment_analysis/: sentiment_analysis.py
server/models/user/: __init__.py  factories.py
server/models/users/: db.py
server/nlp_ssa/api/: app.py
server/nlp_ssa/api/dependencies/: user_session.py
server/nlp_ssa/api/middlewares/: common.py
server/nlp_ssa/config/: __init__.py  env_vars.py  logging.py
server/nlp_ssa/constants/: __init__.py  db_types.py
server/nlp_ssa/db/: db.py
server/nlp_ssa/migrations/: alembic_utilities.py  env.py  script.py.mako
server/nlp_ssa/migrations/versions/: 2024_03_10_2004-b6fb17fa3666_create_users_and_sentiment_analyses_.py  2024_03_15_0158-da61840d2497_add_email_column_to_users_table.py  2024_03_15_0248-41b5c3375bb6_create_stocks_table.py  2024_03_16_0434-f6c3fbfda286_create_analysis_views_table.py  2024_03_17_2024-a6c48b96b09c_create_one_owner_to_many_analysis_views_.py  2024_04_27_1557-d73a47d9cef8_create_article_data_table.py  2024_04_27_2332-3e4697a5822d_alter_type_of_sentence_tokens_column.py  2024_04_30_0110-34ce88232a6f_correct_type_on_quote_stock_symbol_.py  2024_05_09_1337-d83a8f4e77f5_add_and_update_article_data_columns.py  2024_05_11_1439-b327af6cc15c_add_thumbnail_image_url_column_to_.py  2024_05_25_1645-28b6789d5b44_add_exchange_name_to_stocks.py  2024_06_06_2257-5d227dcd49e0_add_output_column_to_sentiment_analyses.py  2024_06_08_0029-fb5b0f6e453d_create_sources_and_source_association_table.py  2024_06_08_0029-fb5b0f6e453d_create_sources_and_source_association_tables.py  2024_06_09_2113-bcd70f514565_add_source_id_column_to_sentiment_analyses.py  2024_06_15_2234-f8782030ac0f_create_sources_table.py  (+5 more)
server/nlp_ssa/models/: __init__.py
server/nlp_ssa/models/article_data/: db.py  (+4 more)
server/nlp_ssa/scraper/: main.py
server/nlp_ssa/seed_data/: mixed_seed_data.csv  stocks_seed_data.csv
server/nlp_ssa/utils/: case_converters.py  pydantic_helpers.py  string_builders.py  testing_mocks.py
server/utils/: pydantic_helpers.py
ssa/: Dockerfile  pyproject.toml  pytest.ini
ssa/data_miner/: main.py  scrapy.cfg
ssa/data_miner/data_miner/: items.py  middlewares.py  pipelines.py  settings.py
ssa/scraper/: main.py
ssa/scraper/scraper/: items.py  middlewares.py  settings.py
(+317 files in other folders)
