[tool.poetry]
name = "ssa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"
bs4 = "^0.0.2"
nltk = "^3.8.1"
vadersentiment = "^3.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-sugar = "^1.0.0"
rich = "^13.7.0"
black = "^24.2.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
